discussion/kv_engine/156529/156529_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: If42bca909b0e7207213dbefd76fa09def27ab931

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-12-21 15:55:43.000000000
Message: 
Patch Set 7: Patch Set 6 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-21 16:21:48.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14607/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14607/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14607/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42549/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0034/0159]: test access scanner settings.....\kv_engine\engines\ep\tests\ep_testsuite.cc:3391 Test failed: `" (Expected `2021-12-21 16:21:47" to be less than or equal to `2021-12-21 16:21:46" - Unexpected task time range, expect: 2021-12-21 16:21:47 <= 2021-12-21 16:21:46 <= 2021-12-21 16:21:47)
(61 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42549/ )

Timeout of a CTest test 419/420 Test #192: ep-engine_ep_unit_tests.PersistentAndEphemeral/ConnectionTest .................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42549/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24661/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24661/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36064/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13437/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15407/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4305/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4247/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16545/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16253/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17327/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-12-21 16:30:57.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
